examples/invalid/program30.c
int main() {
    int arr[10];
    arr = 5;
    return 0;
}

